--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
 .header h1 {
     font-size: 40px;
 }
-.header p{
+
+.header p {
     font-size: 14px;
 }
 
@@ -41,6 +42,13 @@
 .navbar a.active {
     background-color: #666;
     color: white;
+}
+
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 body {
