--- a/style.css
+++ b/style.css
@@ -105,7 +105,8 @@ body {
     color: black;
 }
 
-.e6{
+#e6{
+    text-align: center;
     background-color: rgb(17, 38, 69);
     background-image:url("Images/e621.png");
     background-repeat: repeat-x;
