--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
 .row {
     display: -ms-flexbox;
     display: flex;
+    flex-direction: column;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
