--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
+
 * {
     box-sizing: border-box;
 }
-
 .header {
     padding: 80px;
     text-align: center;
@@ -20,10 +20,10 @@
 
 .navbar a {
     float: left;
-    display: block;
     color: #363738;
     text-align: center;
-    padding: 14px 20px;
+    padding: 1em;
+    margin: 0em auto;
     text-decoration: none;
 }
 
@@ -43,6 +43,12 @@
     color: white;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+
+
 .row {
     display: -ms-flexbox;
     display: flex;
@@ -51,10 +57,7 @@
     flex-wrap: wrap;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-}
+
 
 #smallText {
     font-size: 8px;
@@ -110,7 +113,7 @@ body {
 #e6{
     text-align: center;
     background-color: rgb(17, 38, 69);
-    background-image:url("Images/e621.png");
+    background-image:url("../Images/e621.png");
     background-repeat: repeat-x;
     color:rgb(232, 230, 227) ;
 }
