--- a/CSS/DiscordMain.css
+++ b/CSS/DiscordMain.css
@@ -51,6 +51,19 @@
   --textbox-markdown-syntax: var(--background);
 }
 
+.addFriend-emTWY1{
+    background: #cc6a0a !important;
+}
+
+.circleIcon-3489FI path{
+    fill: #ff850d;
+}
+
+.selected-2r1Hvo{
+    background: #cc6a0a !important;
+}
+
+
 /* VERSION INFO */
 .info-3pQQBb:last-child::after {
   content: "Fallout Terminal Version 1.3.15";
